--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "node": "16"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.2.0",
     "@redux-devtools/extension": "3.2.2",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
